# SmartWardrobe

./: .dockerignore  .gitignore  AGENT_STAGE_SUMMARY.md  DEBUG_LOGIN_ISSUE.md  Dockerfile  FRONTEND_BACKEND_CONNECTION_ISSUES.md  FRONTEND_BACKEND_FIXES_SUMMARY.md  IMAGE_AND_TAG_FIXES.md  INTEGRATION.md  PROJECT_REVIEW.md  QUICK_FIXES.md  QUICK_START.md  README.md  docker-compose.yml  smartwardrobe.db  start.bat  start.sh  项目主题.txt
backend/: .env  .env.example  ALEMBIC_SETUP.md  API_KEYS_SETUP.md  BAICHUAN_TROUBLESHOOTING.md  CHANGELOG_MODELS.md  CONFIGURATION.md  DATABASE_FIXES.md  IMPROVEMENTS.md  METADATA_FIX.md  MODEL_CONFIGURATION.md  NETWORK_TROUBLESHOOTING.md  PROJECT_DOCUMENTATION.md  README.md  TRYON_TROUBLESHOOTING.md  alembic.ini  backend_log.txt  check_import_mock.py  combined_results.txt  create_test_user.py  init_db.py  install_logs.txt  leffa_predict_last_response.txt  leffa_predict_last_response_500.txt  leffa_predict_last_response_curl_default.txt  leffa_predict_last_response_curl_pre.txt  leffa_predict_last_response_curl_retry.txt  leffa_predict_last_response_pre.txt  mock_leffa.py  mock_log.txt  pyproject.toml  requirements.txt  sample_feedbacks.json  smartwardrobe.db  test_db_init.py  tryon_out.txt  tryon_test.py  wardrobe.db
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  security.py
backend/migrations/: alembic.ini  env.py
backend/scripts/: check_baichuan.py  create_dev_admin.py  create_user.py  debug_jwt.py  diagnose_huggingface.py  e2e_upload_test.py  (+14 more)
(+88 files in other folders)
